5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4171/executions/1582_1330.log
== TEST (2019-03-12 17:42:49) 
-- CODE:
print(250/6)
-- OUTPUT:
41.666666666666664
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 17:43:39) 
-- CODE:
print(250/6);
	round(41, 1)
-- ERROR:
File "XXXX", line 2
    round(41, 1)
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 17:43:46) 
-- CODE:
print(250/6)
-- OUTPUT:
41.666666666666664
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 17:44:45) 
-- CODE:
print(round(41.666, 1))

-- OUTPUT:
41.7
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 17:44:48) 
-- CODE:
print(round(41.666, 1))

-- EXECUTION TIME:
0.154757
-- TEST CASE 1:
---- input:
xxx
---- correct output:
41.67
---- user output:
41.7
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 17:44:52) 
-- CODE:
print(round(41.666, 1))

-- OUTPUT:
41.7
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 17:44:57) 
-- CODE:
print(round(41.666, 0))

-- OUTPUT:
42.0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 17:44:58) 
-- CODE:
print(round(41.666, 0))

-- EXECUTION TIME:
0.168154
-- TEST CASE 1:
---- input:
xxx
---- correct output:
41.67
---- user output:
42.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 17:45:13) 
-- CODE:
print(round(41.666, 2))

-- EXECUTION TIME:
0.140276
-- TEST CASE 1:
---- input:
xxx
---- correct output:
41.67
---- user output:
41.67
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-14 00:51:17) 
-- CODE:
print(round(41.666, 2))

-- EXECUTION TIME:
0.170359
-- TEST CASE 1:
---- input:
xxx
---- correct output:
41.67
---- user output:
41.67
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-14 00:52:13) 
-- CODE:
print(round(41.666, 2))

-- EXECUTION TIME:
0.148837
-- TEST CASE 1:
---- input:
xxx
---- correct output:
41.67
---- user output:
41.67
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-14 00:52:16) 
-- CODE:
print(round(41.666, 2))

-- OUTPUT:
41.67
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-14 00:52:17) 
-- CODE:
print(round(41.666, 2))

-- EXECUTION TIME:
0.0901151
-- TEST CASE 1:
---- input:
xxx
---- correct output:
41.67
---- user output:
41.67
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-14 00:57:25) 
-- CODE:
print(round(41.666, 2))

-- EXECUTION TIME:
0.133455
-- TEST CASE 1:
---- input:
xxx
---- correct output:
41.67
---- user output:
41.67
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
